// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fields colors 1`] = `
Array [
  <div
    className="field"
  >
    <label
      className="label"
    >
      Example
    </label>
    <div
      className="control has-icons-right"
    >
      <div
        className="control"
      >
        <input
          className="input is-primary"
          placeholder="testing"
        />
      </div>
      <span
        className="icon is-primary is-right"
      >
        <i
          className="fas fa-user"
        />
      </span>
      <span />
    </div>
  </div>,
  <div
    className="field"
  >
    <label
      className="label"
    >
      Example
    </label>
    <div
      className="control has-icons-right"
    >
      <div
        className="control"
      >
        <input
          className="input is-info"
          placeholder="testing"
        />
      </div>
      <span
        className="icon is-info is-right"
      >
        <i
          className="fas fa-user"
        />
      </span>
      <span />
    </div>
  </div>,
  <div
    className="field"
  >
    <label
      className="label"
    >
      Example
    </label>
    <div
      className="control has-icons-right"
    >
      <div
        className="control"
      >
        <input
          className="input is-success"
          placeholder="testing"
        />
      </div>
      <span
        className="icon is-success is-right"
      >
        <i
          className="fas fa-user"
        />
      </span>
      <span />
    </div>
  </div>,
  <div
    className="field"
  >
    <label
      className="label"
    >
      Example
    </label>
    <div
      className="control has-icons-right"
    >
      <div
        className="control"
      >
        <input
          className="input is-danger"
          placeholder="testing"
        />
      </div>
      <span
        className="icon is-danger is-right"
      >
        <i
          className="fas fa-user"
        />
      </span>
      <span />
    </div>
  </div>,
  <div
    className="field"
  >
    <label
      className="label"
    >
      Example
    </label>
    <div
      className="control has-icons-right"
    >
      <div
        className="control"
      >
        <input
          className="input is-warning"
          placeholder="testing"
        />
      </div>
      <span
        className="icon is-warning is-right"
      >
        <i
          className="fas fa-user"
        />
      </span>
      <span />
    </div>
  </div>,
]
`;

exports[`sizes 1`] = `
Array [
  <div
    className="field"
  >
    <label
      className="label"
    >
      Example
    </label>
    <div
      className="control has-icons-right"
    >
      <div
        className="control"
      >
        <input
          className="input is-small"
        />
      </div>
      <span
        className="icon is-warning is-right"
      >
        <i
          className="fas fa-user"
        />
      </span>
      <span />
    </div>
  </div>,
  <div
    className="field"
  >
    <label
      className="label"
    >
      Example
    </label>
    <div
      className="control has-icons-right"
    >
      <div
        className="control"
      >
        <input
          className="input is-medium"
        />
      </div>
      <span
        className="icon is-warning is-right"
      >
        <i
          className="fas fa-user"
        />
      </span>
      <span />
    </div>
  </div>,
  <div
    className="field"
  >
    <label
      className="label"
    >
      Example
    </label>
    <div
      className="control has-icons-right"
    >
      <div
        className="control"
      >
        <input
          className="input is-large"
        />
      </div>
      <span
        className="icon is-warning is-right"
      >
        <i
          className="fas fa-user"
        />
      </span>
      <span />
    </div>
  </div>,
]
`;

exports[`sizes rounded 1`] = `
Array [
  <div
    className="field"
  >
    <label
      className="label"
    >
      Example
    </label>
    <div
      className="control has-icons-right"
    >
      <div
        className="control"
      >
        <input
          className="input is-small is-rounded"
        />
      </div>
      <span
        className="icon  is-right"
      >
        <i />
      </span>
      <span />
    </div>
  </div>,
  <div
    className="field"
  >
    <label
      className="label"
    >
      Example
    </label>
    <div
      className="control has-icons-right"
    >
      <div
        className="control"
      >
        <input
          className="input is-medium is-rounded"
        />
      </div>
      <span
        className="icon  is-right"
      >
        <i />
      </span>
      <span />
    </div>
  </div>,
  <div
    className="field"
  >
    <label
      className="label"
    >
      Example
    </label>
    <div
      className="control has-icons-right"
    >
      <div
        className="control"
      >
        <input
          className="input is-large is-rounded"
        />
      </div>
      <span
        className="icon  is-right"
      >
        <i />
      </span>
      <span />
    </div>
  </div>,
]
`;
